--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="carousel-inner">
             
           <div class="carousel-item active">
-              <img src="/image/dutch-flag-6.gif" class="flagg" alt="">
-            <img src="/image/windmill-4175486_1920.jpg" class="d-block img-fluid w-100 vh-100" alt="gelbe und rote tulpen mit windmühle im hintergrund">
+              <img src="image/dutch-flag-6.gif" class="flagg" alt="">
+            <img src="image/windmill-4175486_1920.jpg" class="d-block img-fluid w-100 vh-100" alt="gelbe und rote tulpen mit windmühle im hintergrund">
             <div class="carousel-caption text-center">
               <h1 class="display-1 fw-bolder lh-lg text-danger"><p id="txtnl">Niederlande</p> </h1>
               <p class="display-6 fw-bold lh-lg">Das Land der Windmühlen, Tulpen und vielem mehr ....</p>
