--- a/nl-city.html
+++ b/nl-city.html
@@ -65,7 +65,7 @@
                   </nav>
                 <!-- Card -->
                 <div id="amsterdam" class="card m-3 text-center" style="width: 18rem;">
-                    <img src="/image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
+                    <img src="image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Amsterdam</h5>
                     <p class="card-text">Hauptstadt, Kanäle, Museen, Fahrräder, Madame Tussauds, The Amsterdam Dungeon, uvm.... </p>
@@ -172,7 +172,7 @@
                   </div>
                   <!-- Card -->
                 <div id="rotterdam" class="card m-3 text-center" style="width: 18rem;">
-                    <img src="/image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
+                    <img src="image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Rotterdam</h5>
                     <p class="card-text">Moderne Hafenstadt, Seefahrtsmuseen, Ausstellungen alter Schiffe, uvm....  </p>
@@ -222,7 +222,7 @@
                   </div>
                   <!-- Card -->
                 <div id="utrecht" class="card m-3 text-center" style="width: 18rem;">
-                    <img src="/image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
+                    <img src="image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Utrecht</h5>
                     <p class="card-text">Religiöses Zentrum, mittelalterliche Altstadt, Domtoren (Glockenturm), uvm....</p>
@@ -271,7 +271,7 @@
                   </div>
                 <!-- Card -->
                 <div id="texel" class="card m-3 text-center" style="width: 18rem;">
-                    <img src="/image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
+                    <img src="image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Texel</h5>
                     <p class="card-text">Nordseeinsel, vielfältige Landschaft, reichhaltige Tier- und Pflanzenwelt, Dünen, uvm.... </p>
@@ -321,7 +321,7 @@
                   </div>
                   <!-- Card -->
                 <div id="lelystad" class="card m-3 text-center" style="width: 18rem;">
-                    <img src="/image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
+                    <img src="image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Lelystad</h5>
                     <p class="card-text">Tulpenfelder, Wassersport, Jachthäfen, Segel-Surfschulen, Nationales Luftfahrtmuseum uvm.... </p>
@@ -375,7 +375,7 @@
                   </div>
                   <!-- Card -->
                 <div id="veluwe" class="card m-3 text-center" style="width: 18rem;">
-                    <img src="/image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
+                    <img src="image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Veluwe (Gebiet)</h5>
                     <p class="card-text">Großes Waldgebiet, größter Skulpturengarten Europas, Natur-und Ferienparks, Tiere uvm.... </p>
@@ -425,7 +425,7 @@
                   </div>
                   <!-- Card -->
                 <div id="alkmaar" class="card m-3 text-center" style="width: 18rem;">
-                    <img src="/image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
+                    <img src="image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Alkmaar</h5>
                     <p class="card-text">Käsemarkt, nationales Biermuseum, Beatles Museum, Poldern, Natur, Dünen, Strand, uvm....</p>
