--- a/nl-city.html
+++ b/nl-city.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/"> -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="nl-city.css">
 
 </head>
 <body>
@@ -122,7 +122,7 @@
                       
                   <!-- Card -->
                 <div id="den-haag" class="card m-3 text-center" style="width: 18rem;">
-                    <img src="/image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
+                    <img src="image/amsterdam-canal.jpg" class="card-img-top rounded mt-2 " alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Den Haag</h5>
                     <p class="card-text">Regierungssitz (gotisch), Küstenatmosphäre, Museen, Heimat der Königsfamilie, uvm....  </p>
